--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
 title: fan's blog
 description: In the dark it is easy to pretend
-url: https://vszhub.github.io
+url: https://github.com/fan-14
 avatar: /avatar.jpeg
 paginate: 5
 permalink: pretty
